--- a/index.html
+++ b/index.html
@@ -30,15 +30,30 @@
     <title>Netflix Clone</title>
   </head>
   <body>
-    <header>
+    <header class="navbar">
       <div class="container">
-        <h2 class="logo">NETFLIX</h2>
-        <nav>
-          <a href="#">Início</a>
-          <a href="#">Séries</a>
-          <a href="#">Filmes</a>
-          <a href="#">Documentários</a>
-        </nav>
+        <div class="secoes">
+          <h2 class="logo">NETFLIX</h2>
+          <nav>
+            <a href="#">Início</a>
+            <a href="#">Idioma e legendas</a>
+            <a href="#">Séries</a>
+            <a href="#">Filmes</a>
+            <a href="#">Bombando</a>
+            <a href="#">Minha Lista</a>
+          </nav>
+        </div>
+        <div class="conta">
+          <a href="#"><i class="fas fa-search icon"></i></a>
+          <a href="#"><i class="fas fa-bell icon"></i></a>
+          <a href="#"
+            ><img
+              class="profile-image"
+              src="img/profile.png"
+              alt="profile image"
+          /></a>
+          <a href="#"><i class="fas fa-caret-down icon"></i></a>
+        </div>
       </div>
     </header>
 
@@ -51,17 +66,18 @@
             pelo futuro da família, mudando o destino de todos.
           </p>
           <div class="botoes">
-            <button role="button" class="botao">
-              <i class="fas fa-play"></i> ASSISTIR AGORA
+            <button role="button" class="botao assistir">
+              <i class="fas fa-play icon"></i> Assistir
             </button>
-            <button role="button" class="botao">
-              <i class="fas fa-info-circle"></i>MAIS INFORMAÇÕES
+            <button role="button" class="botao info">
+              <i class="fas fa-info-circle icon"></i>Mais informações
             </button>
           </div>
         </div>
       </div>
 
       <div class="carrosel-filmes">
+        <h4>Assistir novamente</h4>
         <div class="owl-carousel owl-theme">
           <div class="item">
             <img class="box-filme" src="img/mini1.jpg" />
@@ -94,6 +110,139 @@
             <img class="box-filme" src="img/mini10.jpg" />
           </div>
         </div>
+
+        <div class="carrosel-filmes">
+          <div class="owl-carousel owl-theme">
+            <div class="item">
+              <img class="box-filme" src="img/mini1.jpg" />
+            </div>
+            <div class="item">
+              <img class="box-filme" src="img/mini2.jpg" />
+            </div>
+            <div class="item">
+              <img class="box-filme" src="img/mini3.jpg" />
+            </div>
+            <div class="item">
+              <img class="box-filme" src="img/mini4.jpg" />
+            </div>
+            <div class="item">
+              <img class="box-filme" src="img/mini5.jpg" />
+            </div>
+            <div class="item">
+              <img class="box-filme" src="img/mini6.jpg" />
+            </div>
+            <div class="item">
+              <img class="box-filme" src="img/mini7.jpg" />
+            </div>
+            <div class="item">
+              <img class="box-filme" src="img/mini8.jpg" />
+            </div>
+            <div class="item">
+              <img class="box-filme" src="img/mini9.jpg" />
+            </div>
+            <div class="item">
+              <img class="box-filme" src="img/mini10.jpg" />
+            </div>
+          </div>
+          <div class="carrosel-filmes">
+            <div class="owl-carousel owl-theme">
+              <div class="item">
+                <img class="box-filme" src="img/mini1.jpg" />
+              </div>
+              <div class="item">
+                <img class="box-filme" src="img/mini2.jpg" />
+              </div>
+              <div class="item">
+                <img class="box-filme" src="img/mini3.jpg" />
+              </div>
+              <div class="item">
+                <img class="box-filme" src="img/mini4.jpg" />
+              </div>
+              <div class="item">
+                <img class="box-filme" src="img/mini5.jpg" />
+              </div>
+              <div class="item">
+                <img class="box-filme" src="img/mini6.jpg" />
+              </div>
+              <div class="item">
+                <img class="box-filme" src="img/mini7.jpg" />
+              </div>
+              <div class="item">
+                <img class="box-filme" src="img/mini8.jpg" />
+              </div>
+              <div class="item">
+                <img class="box-filme" src="img/mini9.jpg" />
+              </div>
+              <div class="item">
+                <img class="box-filme" src="img/mini10.jpg" />
+              </div>
+            </div>
+            <div class="carrosel-filmes">
+              <div class="owl-carousel owl-theme">
+                <div class="item">
+                  <img class="box-filme" src="img/mini1.jpg" />
+                </div>
+                <div class="item">
+                  <img class="box-filme" src="img/mini2.jpg" />
+                </div>
+                <div class="item">
+                  <img class="box-filme" src="img/mini3.jpg" />
+                </div>
+                <div class="item">
+                  <img class="box-filme" src="img/mini4.jpg" />
+                </div>
+                <div class="item">
+                  <img class="box-filme" src="img/mini5.jpg" />
+                </div>
+                <div class="item">
+                  <img class="box-filme" src="img/mini6.jpg" />
+                </div>
+                <div class="item">
+                  <img class="box-filme" src="img/mini7.jpg" />
+                </div>
+                <div class="item">
+                  <img class="box-filme" src="img/mini8.jpg" />
+                </div>
+                <div class="item">
+                  <img class="box-filme" src="img/mini9.jpg" />
+                </div>
+                <div class="item">
+                  <img class="box-filme" src="img/mini10.jpg" />
+                </div>
+              </div>
+              <div class="carrosel-filmes">
+                <div class="owl-carousel owl-theme">
+                  <div class="item">
+                    <img class="box-filme" src="img/mini1.jpg" />
+                  </div>
+                  <div class="item">
+                    <img class="box-filme" src="img/mini2.jpg" />
+                  </div>
+                  <div class="item">
+                    <img class="box-filme" src="img/mini3.jpg" />
+                  </div>
+                  <div class="item">
+                    <img class="box-filme" src="img/mini4.jpg" />
+                  </div>
+                  <div class="item">
+                    <img class="box-filme" src="img/mini5.jpg" />
+                  </div>
+                  <div class="item">
+                    <img class="box-filme" src="img/mini6.jpg" />
+                  </div>
+                  <div class="item">
+                    <img class="box-filme" src="img/mini7.jpg" />
+                  </div>
+                  <div class="item">
+                    <img class="box-filme" src="img/mini8.jpg" />
+                  </div>
+                  <div class="item">
+                    <img class="box-filme" src="img/mini9.jpg" />
+                  </div>
+                  <div class="item">
+                    <img class="box-filme" src="img/mini10.jpg" />
+                  </div>
+                </div>
       </div>
     </main>
 
